force-app/main/default/objects/Inventory_Assignment__c/Inventory_Assignment__c.object-meta.xml
<CustomObject>
    <label>Inventory Assignment</label>
    <nameField>
        <label>Inventory Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>