force-app/main/default/objects/Inventory_Assignment__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <formula>Warehouse_Inventory__r.Asset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset</label>
    <type>Text</type>
</CustomField>