force-app/main/default/objects/Inventory_Assignment__c/fields/Comment_Message__c.field-meta.xml
<CustomField>
    <fullName>Comment_Message__c</fullName>
    <label>Comment (Message)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>