force-app/main/default/objects/Inventory_Assignment__c/fields/Opportunity_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Reserved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Reserved</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Inventory Assignments</relationshipLabel>
    <relationshipName>Inventory_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>