force-app/main/default/objects/Inventory_Assignment__c/fields/Order_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Order_Reserved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Reserved</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Inventory Assignments</relationshipLabel>
    <relationshipName>Inventory_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>