force-app/main/default/objects/Inventory_Assignment__c/fields/Reserved_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Comment__c</fullName>
    <label>Reserved Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>