force-app/main/default/objects/Inventory_Assignment__c/fields/Reserved_Date__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Date__c</fullName>
    <label>Reserved Date</label>
    <type>Date</type>
</CustomField>