force-app/main/default/objects/Inventory_Assignment__c/fields/Warehouse_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Inventory</label>
    <referenceTo>Warehouse_Inventory__c</referenceTo>
    <relationshipLabel>Inventory Assignments</relationshipLabel>
    <relationshipName>Inventory_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>