force-app/main/default/objects/Inventory_Assignment__c/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <formula>Warehouse_Inventory__r.Warehouse_Location__r.Location_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Location</label>
    <type>Text</type>
</CustomField>